# MeshiPay

./: .env.example  .gitignore  AGENTS.md  README.md  app.json  eslint.config.js  foundry.toml  metro.config.js  metro.wdk-polyfills.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wdk.config.js
.wdk/: index.d.ts  index.js
assets/lottie/: active-nav-pulse.json
contracts/src/: FootballMatchRegistry.sol
docs/: memory.md
docs/superpowers/plans/: 2026-07-12-sepolia-ticket-payment-reliability.md  (+2 more)
patches/bare-kit/: android-events.c
patches/react-native-bare-kit/: BareKitAndroidVmAttach.c  BareKitModule.h  BareKitModuleAndroid.cc  BareKitModuleDefault.cc
plugins/: withAndroid16KbPageSize.js  withAndroidSubprojects.js  withNativeHelperLibs.js
plugins/nativehelper-lib/: CMakeLists.txt  libnativehelper.map  nativehelper_stub.c
scripts/: android-env.sh  build-bare-kit-lib.sh  build-nativehelper-libs.sh  build-standalone-apk.sh  deploy-match-registry.mjs  patch-bare-kit-android-vm.sh  run-android.sh  setup-wdk-bundler.sh
src/app/: _layout.tsx  choose-mode.tsx  create-ticket.tsx  explore.tsx  home.tsx  index.tsx  pools.tsx  treasury.tsx
src/components/: animated-icon.tsx  app-tabs.tsx  app-tabs.web.tsx
src/config/: wdk.ts
src/constants/: meshipay-brand.ts  theme.ts
src/hooks/: use-color-scheme.web.ts  use-match-sale-watcher.ts  use-onboarding-status.ts  use-pay-swipe-lock.tsx  use-payment-flow.ts  use-receiver-chain-watcher.ts  use-tickets.ts  use-user-role.ts  use-wallet-setup.ts  use-wallet-usdt-balance.ts
src/types/: bare.d.ts
(+102 files in other folders)
